kubernetes/kubernetes-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: song-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: song-service
  template:
    metadata:
      labels:
        app: song-service
    spec:
      containers:
      - name: song-service
        image: brianmaymc/song-service:latest
        ports:
          - protocol: TCP
            containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
      - name: user-service
        image: brianmaymc/user-service:latest
        ports:
          - protocol: TCP
            containerPort: 8081
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: playlist-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: playlist-service
  template:
    metadata:
      labels:
        app: playlist-service
    spec:
      containers:
      - name: playlist-service
        image: brianmaymc/playlist-service:latest
        ports:
          - protocol: TCP
            containerPort: 8082
