kubernetes/k8s-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: song-service-svc
spec:
  type: NodePort
  selector:
    app: song-service
  ports:
    -  port: 1111
       targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: user-service-svc
spec:
  type: NodePort
  selector:
    app: user-service
  ports:
    -  port: 1112
       targetPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: playlist-service-svc
spec:
  type: NodePort
  selector:
    app: playlist-service
  ports:
    -  port: 1113
       targetPort: 8082
